# vektoria

./: .abra  CHANGELOG.md  callCallee.vk  closures.vk  deployVektoria.ps1  factorial.vk  fib.vk  guessingGame.vk  list.vk  loops.vk  objects.vk  partial.vk  scratch.vk  syntax.txt  test.vk  test.vkt  test2.vk  trg_types.vk  userInput.vk  user_functions.md  vektoria.cabal  vektoria.md
app/: Main.hs
app/Lib/: VInterpret.hs  VLex.hs  VParse.hs
app/Lib/Data/: Token.hs
app/Lib/Parser/: Parser.hs
app/Vektoria/Interpreter/: Evaluator.hs  Runtime.hs  VInterpret.hs
app/Vektoria/Lexer/: VLex.hs
app/Vektoria/Lib/: ParsingGenerics.hs
app/Vektoria/Lib/Data/: Element.hs  Entity.hs  Expression.hs  Statement.hs  Token.hs
app/Vektoria/Parser/: VParse.hs
samples/: .abra  abra.vk  countSpaces.vk  eager.vk  enumerate.out  enumerate.vk  example.vk  factorial.vk  fib.vk  find.vk  functor.vk  gol.vk  guessingGame.vk  indexed.vk  linkedList.vk  main.vk  parse.vk  readingFiles.vk  state.vk  stringSplit.vk  table.vk  test.vk  until.vk
samples/project/: main.vk
syntax/: vektoria.vim
