cabal-version:      2.4
name:               vektoria
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Thomas Svendsen
maintainer:         thomasbergsvendsen@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable vektoria
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    other-modules: Vektoria.Lexer.VLex
                , Vektoria.Parser.VParse
                , Vektoria.Interpreter.VInterpret
                , Vektoria.Lib.Data.Token
                , Vektoria.Lib.Data.Statement
                , Vektoria.Lib.Data.Expression
                , Vektoria.Lib.Data.Element
                , Vektoria.Lib.Data.Entity
                , Vektoria.Lib.ParsingGenerics
                , Vektoria.Interpreter.Evaluator
                , Vektoria.Interpreter.Runtime
    build-depends:    base >=4.16.4.0 && <4.21
                    , random
                    , directory
                    , time
                    , split
                    , text
                    , unordered-containers
                    , mtl
    hs-source-dirs:   app
    default-language: Haskell2010
